# monografia

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ft2unb.sty  latexmkrc
images/: ABasicComputer.xcf
images/diagrams/: fpga.drawio  multicycle.drawio  pipeline.drawio  singlecycle.drawio  singlecycle_base.drawio
images/fpga/: de1_soc.xcf
images/instructions/: instruction_formats.ai
presentation/: .latexmkrc  outline.txt  presentation.tex
src/: .latexmkrc  anexo_diagramas.tex  anexo_programas.tex  cap1_introducao.tex  cap2_revisao.tex  cap3_proposta.tex  cap4_resultados.tex  cap5_conclusoes.tex  cap_Arquitetura.tex  cap_Conclusoes.tex  cap_Implementacao.tex  cap_Introducao.tex  cap_Resultados.tex  cap_arquitetura.tex  cap_conclusoes.tex  cap_fpga.tex  cap_implementacao.tex  cap_introducao.tex  cap_proposta.tex  cap_resultados.tex  cap_revisao.tex  cap_sintese.tex  cap_verilog.tex  ficha_catalografica.tex  ft2unb.sty  relatorio.bib  relatorio.tex  simbolos.tex
src/svg-inkscape/: intel_alm_high_level_svg-tex.pdf_tex  switch_box_wikimedia_svg-tex.pdf_tex
